# sisfa

./: .gitignore  CMakeLists.txt  README.md
documentation/: final_presentation12.06.pptx
include/: crypto.h  steganography.h  vault.h
src/: crypto.cpp  embeddialog.cpp  embeddialog.h  extractdialog.cpp  extractdialog.h  main.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.h  steganography.cpp  vault.cpp
